--- a/music.html
+++ b/music.html
@@ -72,7 +72,7 @@
     <p>Тут ти можеш прослухати трек, який грає на головній сторінці.</p>
 
     <!-- Плеєр -->
-    <audio controls src="assets/audio/stolar-theme.m4a"></audio>
+    <audio controls src="assets/assets/audio/stolar-theme.m4a"
   </div>
 
   <a href="index.html" class="back-btn">← Повернутися на головну</a>
